--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About us</h1>
-<p>We love grumbling about things.</p>
+<p>I used to do math for a living a while back. Now, I'd just like to share my love of math with parents and kids for fun.</p>
