--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome to Grumbl</h1>
-<p>Sign up here.</p>
+<h1>Welcome!</h1>
+<p>This is social media site to share cool facts, problems and trends in math and science.</p>
+<p>Sign up here</p>
