Imported Bootstrap template

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
   </head>
 
   <body>
-  <%= render 'pages/header' %>
-  <%= yield %>
+    <%= render 'pages/header' %>
+    <%= yield %>
+    <%= render 'pages/footer' %>
   </div>
   </body>
 </html>
