--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>About us</h1>
-<p>I used to do math for a living a while back. Now, I'd just like to share my love of math with parents and kids for fun.</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
