--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Contact us</h1>
-<p>You can find me on Twitter at @kakkadiboo</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>Contact us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
