--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -6,6 +6,12 @@
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
+          <% if user_signed_in? %>
+            <li class="nav-item pull-md-right"><%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "nav-link" %></li>
+           <% else %>
+             <li class="nav-item pull-md-right"><%= link_to "Sign up", new_user_registration_path,   class: "nav-link btn btn-primary" %></li>
+             <li class="nav-item pull-md-right"><%= link_to "Sign in", new_user_session_path,   class: "nav-link" %></li>
+           <% end %> 
         </ul>
       </div>
     </nav>
