--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,9 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .jumbotron-home {
-    background-image: url(image_path('home-bg.jpg'));
+    // background-image: url(image_path('home-bg.jpg'));
+    background-image: url(image_path('Grumbl_image.jpg'));
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    color: white;
 }
+
 
