--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -3,7 +3,7 @@
       <div class="container">
         <hr>
         <center>
-          <p>© 2016 One Month</p>
+          <p>© 2016 Grumbl</p>
         </center>
       </div>
-    </footer>
+    </footer> 
