--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,28 +6,28 @@
 <% else %>     
     <div class="jumbotron jumbotron-home">
         <div class="container">        
-                <h1>Welcome to my website!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <%= link_to "Learn more »", "#", class: "btn btn-primary btn-lg" %> 
+                <h1>Welcome to Grumbl!</h1>
+                <h2>A platform for noobs to rave and rant about programming</h2>
+                <%= link_to "Sign up »", "#", class: "btn btn-primary btn-lg" %> 
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+                <h2>Rave</h2>
+                <p>Yeah, rave about whatever you're struggling with be it Javascript HTML or CSS or...</p>
+                <p><%= link_to "RAVE", "#", class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+                <h2>Rant</h2>
+                <p>Share your frustration with other equally frustrated humans for a while.</p>
+                <p><%= link_to "RANT", "#", class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+                <h2>Review</h2>
+                <p>What did you really think about that One Month HTML course you took a while back?</p>
+                <p><%= link_to "REVIEW", "#", class: "btn btn-secondary" %></p>
             </div>
         </div>
     </div>
-<% end %> 
+<% end %>  
