--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
             </div>
             <div class="col-md-4">
                 <h2>Review</h2>
-                <p>What did you really think about that One Month HTML course you took a while back?</p>
+                <p>What did you think about that One Month HTML course you took a while back?</p>
                 <p><%= link_to "REVIEW", "#", class: "btn btn-secondary" %></p>
             </div>
         </div>
