--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,16 +1,17 @@
 <!-- Navigation Bar -->
     <nav class="navbar navbar-dark bg-inverse">
       <div class="container">
-        <%= link_to "Grumbl", root_path, class: "navbar-brand" %>
+        <%= link_to "Grumbl >>", root_path, class: "navbar-brand" %>
         <ul class="nav navbar-nav">
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
           <% if user_signed_in? %>
             <li class="nav-item pull-md-right"><%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "nav-link" %></li>
+            <li class="nav-item pull-md-right"><%= link_to "Account", account_path,class: "nav-link" %></li>
            <% else %>
-             <li class="nav-item pull-md-right"><%= link_to "Sign up", new_user_registration_path,   class: "nav-link btn" %></li>
-             <li class="nav-item pull-md-right"><%= link_to "Sign in", new_user_session_path,   class: "nav-link" %></li>
+             <li class="nav-item pull-md-right"><%= link_to "Sign up", sign_up_path, class: "nav-link btn" %></li>
+             <li class="nav-item pull-md-right"><%= link_to "Sign in", sign_in_path, class: "nav-link" %></li>
            <% end %> 
         </ul>
       </div>
