--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -8,9 +8,9 @@
           <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
           <% if user_signed_in? %>
             <li class="nav-item pull-md-right"><%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "nav-link" %></li>
-            <li class="nav-item pull-md-right"><%= link_to "Account", account_path,class: "nav-link" %></li>
+            <li class="nav-item pull-md-right"><%= link_to "Account", account_path, class: "nav-link" %></li>
            <% else %>
-             <li class="nav-item pull-md-right"><%= link_to "Sign up", sign_up_path, class: "nav-link btn" %></li>
+             <li class="nav-item pull-md-right"><%= link_to "Sign up", sign_up_path, class: "btn btn-primary" %></li>
              <li class="nav-item pull-md-right"><%= link_to "Sign in", sign_in_path, class: "nav-link" %></li>
            <% end %> 
         </ul>
