--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,42 +1,54 @@
 <% if user_signed_in? %>
     <div class="jumbotron jumbotron-home">
         <div class="container">        
-                <h1> Grumbl</h1>
-                <h2> >> ??</h2>
-                <h2> >> ?? </h2>
-                <h2> >> ?? </h2>
-                <h2> >> ?? </h2>
+                <h1>Grumbl</h1>
+                <h2>>> The old pond;</h2>
+                <h2>>> a frog jumps in -</h2>
+                <h2>>> the sound of water.</h2>
+                <h2>>> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<em>Basho</em></h2>
         </div>
     </div>    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h4>Write reviews of courses</h4>
+                <p><%= link_to "Reviews", tweets_path, class: "btn btn-secondary" %></p>
+            </div>
+            <div class="col-md-4">
+                <h4>Share the best online resources</h4>
+                <p><%= link_to "Resources", "#", class: "btn btn-secondary" %></p>
+            </div>
+            <div class="col-md-4">
+                <h4>What do you want to learn next?</h4>
+                <p><%= link_to "Requests", "#", class: "btn btn-secondary" %></p>
+            </div>
+        </div>
+    </div>
 <% else %>     
     <div class="jumbotron jumbotron-home">
         <div class="container">        
-                <h1> >> Grumbl </h1>
-                <h2> >> programming? </h2>
-                <h2> >> share.your.story( )</h2>
-                <h2> >> = inspire_others!</h2>
-                <h2> >> <%= link_to "Sign up »", "#", class: "btn btn-primary btn-lg" %> </h2>
-                
+                <h1>Grumbl</h1>
+                <h2>>> programming?</h2>
+                <h2>>> share.your.story( )</h2>
+                <h2>>> &inspire_others!</h2>
+                <h2><%= link_to "Sign up »", sign_up_path, class: "btn btn-primary btn-lg" %></h2>    
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Reviews</h2>
-                <p>What did you think about One Month Rails?</p>
-                <p><%= link_to "Reviews", "#", class: "btn btn-secondary" %></p>
+                <h4>Write reviews of courses</h4>
+                <p><%= Tweet.last.content %></p>
+                <p><%= link_to "Reviews", tweets_path, class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Resources</h2>
-                <p>Share the best online resources you've found.</p>
-                <p><%= link_to "Resources", "#", class: "btn btn-secondary" %></p>
+                <h4>Share the best online resources</h4>
+                <p><%= link_to "Resources", sign_up_path, class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Solutions</h2>
-                <p>Post solutions to problems you faced.</p>
-                <p><%= link_to "Solutions", "#", class: "btn btn-secondary" %></p>
+                <h4>What do you want to learn next?</h4>
+                <p><%= link_to "Requests", sign_up_path, class: "btn btn-secondary" %></p>
             </div>
-            
         </div>
     </div>
 <% end %>  
