--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
     <p>
       <strong>User:</strong>
-      <%= @tweet.user %>
+      <%= @tweet.user.email %>
     </p>
 
     <p>
