--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>What inspired you to become a programmer?</h3>
-                <p><%= link_to "Stories", "#", class: "btn btn-secondary" %></p>
+                <p><%= link_to "Stories", stories_path, class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-6">
                 <h3>Write reviews of bootcamps, tutorials & books</h3>
@@ -30,8 +30,12 @@
         <div class="row">
              <div class="col-md-6">
                 <h3>What inspired you to become a programmer?</h3>
-                <p> Placeholder text Placeholder text Placeholder text.</p>
-                <p><%= link_to "Stories", sign_up_path, class: "btn btn-secondary" %></p>
+                <% if Story.last !=nil %>
+                    <p><%= Story.last.story%></p>
+                <% else %>
+                    <p>Be the first to write a story.</p>
+                <%end %>
+                <p><%= link_to "Stories", stories_path, class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-6">
                 <h3>Write reviews of bootcamps, tutorials & books</h3>
