Added name, username columns to user table and other customizations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 // Custom bootstrap variables must be set or imported before bootstrap itself.
-@import "bootstrap";
 @import "bootstrap_customizations.scss";
+@import "bootstrap";
 
 @-ms-viewport{
   width: device-width;
@@ -8,3 +8,4 @@
 
 @import "pages";
 @import "sign_in_and_sign_up";
+@import "container";
