--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,13 +1,11 @@
+<div class = "new_user">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "user@example.com" %>
-  </div>
+ 
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -18,7 +16,6 @@
     <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Minimum 6 characters" %>
     <% if @minimum_password_length %>
       <br />
-      <!-- <em><%= @minimum_password_length %> characters minimum</em> -->
     <% end %>
   </div>
 
@@ -28,7 +25,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :current_password %> <!-- <i>(we need your current password to confirm your changes)</i><br /> -->
+    <%= f.label :current_password %>
     <%= f.password_field :current_password, autocomplete: "off", class: "form-control", placeholder: "We need your current password to confirm your changes" %>
   </div>
 
@@ -38,6 +35,8 @@
 
 <% end %>
 
+
+
 <h2>Cancel my account</h2>
 
 
@@ -45,4 +44,5 @@
 
 <%= link_to "Back", :back %>
 
+</div>
 
