--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,18 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  
+   
   <h2>Sign up</h2>
   
   <%= devise_error_messages! %>
+
+  <div class="form-group">
+    <%= f.label :username %>
+    <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "Minumum 6 lower case characters" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: "John Smith" %>
+  </div>
 
   <div class="form-group">
     <%= f.label :email %>
@@ -17,6 +27,8 @@
   <div class="form-group">
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Confirm Password" %>
   </div>
+
+
 
   <%= f.submit "Sign up", class: "btn btn-primary" %>
 <% end %>
