--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,18 +1,27 @@
 <!-- Navigation Bar -->
-    <nav class="navbar navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-inverse">
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+  <div class="collapse navbar-toggleable-md" id="navbarResponsive">
+
       <div class="container">
         <%= link_to "Grumbl >>", root_path, class: "navbar-brand" %>
         <ul class="nav navbar-nav">
-          <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
-          <% if user_signed_in? %>
-            <li class="nav-item pull-md-right"><%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "nav-link" %></li>
-            <li class="nav-item pull-md-right"><%= link_to "Account", account_path, class: "nav-link" %></li>
-           <% else %>
-             <li class="nav-item pull-md-right"><%= link_to "Sign up", sign_up_path, class: "btn btn-primary" %></li>
-             <li class="nav-item pull-md-right"><%= link_to "Sign in", sign_in_path, class: "nav-link" %></li>
-           <% end %> 
+            <li class="nav-item active"><%= link_to "Home", root_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
+            <% if user_signed_in? %>
+                <li class="nav-item pull-md-right"><%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "nav-link" %></li>
+                <li class="nav-item pull-md-right"><%= link_to "Account", account_path, class: "nav-link" %></li>
+
+                <li class="nav-item active pull-md-right"><%= link_to ' + Review', new_tweet_path, class: "nav-link" %></li>
+                <li class="nav-item active pull-md-right"><%= link_to ' + Story', new_story_path, class: "nav-link" %></li>
+           
+            <% else %>
+               <li class="nav-item active pull-md-right"><%= link_to "Sign up", sign_up_path, class: "btn btn-primary" %></li>
+               <li class="nav-item active pull-md-right"><%= link_to "Sign in", sign_in_path, class: "nav-link" %></li>
+            <% end %> 
         </ul>
-      </div>
-    </nav> 
+     </div>
+  </div>
+</nav> 
+<!--  -->
