--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,39 +1,32 @@
 <div class = "container">
-
-    <h1>Stories</h1>
-
-    <table class = "table">
-      <thead class = "thead-inverse">
-        <tr>
-          <th>User</th>
-          <th>Date</th>
-          <th>Title</th>
-          <th>Story</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @stories.each do |story| %>
-          <tr>
-            <td><%= story.user.email %></td>
-            <td><%= story.date %></td>
-            <td><%= story.title %></td>
-            <td><%= story.story if story.user %></td>
-            <td><%= link_to 'Show', story %></td>
-            <% if story.user == current_user %>
-                <td><%= link_to 'Edit', edit_story_path(story) %></td>
-                <td><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            <%end%>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-    <br>
-    <% if user_signed_in? %>
-        <%= link_to 'New Story', new_story_path %>
-    <% end %>
-
+   <!-- <h1>Stories</h1> -->
+      <div class = "row">
+         <div class = "col-md-4">
+            <div class="card card-block">
+               <% if user_signed_in? %>
+                  <h4 class="card-title">Your Account</h4>
+                  <p class="card-text"><%= current_user.username %></p>
+                  <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a>
+               <% else %>
+                <h4 class="card-title">Hi there!</h4>
+                <p class="card-text">What are you waiting for?</p>
+                <h1><%= link_to "Sign up", sign_up_path, class: "btn btn-primary btn-lg" %></h1>
+               <% end %>
+            </div>
+         </div>
+         <div class = "col-md-8">
+            <ul class="list-group">
+               <% @stories.each do |story| %>
+                  <%= link_to story, class: "list-group-item list-group-item-action" do %>
+                      <h5 class="list-group-item-heading"><%= story.title %></h5>
+                      <p class="list-group-item-heading"><%= story.user.username %></p>
+                      <p class="list-group-item-text"><%= story.story if story.user %></p>
+                  <%end%>  
+              <% end %>
+           </ul> 
+        </div>
+     </div>  
  </div>   
+
 
