--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,8 +1,7 @@
 <!-- Navigation Bar -->
-<nav class="navbar navbar-dark bg-inverse">
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+<nav class="navbar navbar-light bg-faded">
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">>></button>
   <div class="collapse navbar-toggleable-md" id="navbarResponsive">
-
       <div class="container">
         <%= link_to "Grumbl >>", root_path, class: "navbar-brand" %>
         <ul class="nav navbar-nav">
