--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h3>What inspired you to become a programmer?</h3>
+                <h3>Every story begins with the first sentence</h3>
                 <p><%= link_to "Stories", stories_path, class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-6">
@@ -22,14 +22,19 @@
 <% else %>     
     <div class="jumbotron jumbotron-home">
         <div class="container">        
-                <h1>Grumbl >> Document your journey into programming</h1>
+                <h1>Grumbl >></h1>
+                <h1>Practice your writing skills</h1>
+                <h1>Get better through feedback</h1>
                 <h1><%= link_to "Sign up", sign_up_path, class: "btn btn-primary btn-lg" %></h1>    
         </div>
     </div>
     <div class="container">
         <div class="row">
              <div class="col-md-6">
-                <h3>What inspired you to become a programmer?</h3>
+                <h3>Every story begins with a first sentence</h3>
+                <p>Have you ever asked yourself why anyone would want to read what you write? Why should anyone care? Do you know your audience?</p>
+                <p>Well, you don't have to wait any longer to find out. Submit excerpts from your writing and get some quick feedback. Whether it's your opening sentence, or a plot for a story you've been mulling over, or a character description, or a poem...</p>
+                <p>The more you write, and the more frequently you edit your writing, the faster you will improve. Writing takes practice, and writing well requires repeated editing and feedback.</p> 
                 <% if Story.last !=nil %>
                     <p><%= Story.last.story%></p>
                 <% else %>
