--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,7 +5,7 @@
            <div class="card card-block">
               <% if user_signed_in? %>
                  <h4 class="card-title">Your Account</h4>
-                 <p class="card-text"><%= current_user.username %></p>
+                 <p class="card-text"><%= link_to current_user.username, user_path(current_user.username) %></p>
                  <a href="#" class="card-link">Card link</a>
                  <a href="#" class="card-link">Another link</a>
               <% else %>
