--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,16 +3,8 @@
       <div class = "row">
          <div class = "col-md-4">
             <div class="card card-block">
-               <% if user_signed_in? %>
-                  <h4 class="card-title">Your Account</h4>
-                  <p class="card-text"><%= link_to current_user.username, user_path(current_user.username) %></p>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-               <% else %>
-                <h4 class="card-title">Hi there!</h4>
-                <p class="card-text">What are you waiting for?</p>
-                <h1><%= link_to "Sign up", sign_up_path, class: "btn btn-primary btn-lg" %></h1>
-               <% end %>
+                  <h4 class="card-title"> <%= @user.username %></h4>
+                  <p class="card-text"><%= @user.name %></p>
             </div>
          </div>
          <div class = "col-md-8">
@@ -26,7 +18,5 @@
               <% end %>
            </ul> 
         </div>
-     </div>  
- </div>   
-
-
+     </div> 
+</div>
