--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -3,13 +3,16 @@
       <div class = "row">
          <div class = "col-md-4">
             <div class="card card-block">
-                  <h4 class="card-title"> <%= @user.username %></h4>
-                  <p class="card-text"><%= @user.name %></p>
-                  <% if current_user.following?(@user) %>
-                    <p class ="card-text"><%= link_to "Unfollow", unfollow_user_path(@user.username), method: :delete %></p> 
-                  <% else %> 
-                    <p class ="card-text"><%= link_to "Follow", follow_user_path(@user.username), method: :post %></p>
-                  <% end %> 
+               <% if user_signed_in? %>
+                  <h4 class="card-title">Your Account</h4>
+                  <p class="card-text"><%= link_to current_user.username, user_path(current_user.username) %></p>
+                  <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a>
+               <% else %>
+                <h4 class="card-title">Hi there!</h4>
+                <p class="card-text">What are you waiting for?</p>
+                <h1><%= link_to "Sign up", sign_up_path, class: "btn btn-primary btn-lg" %></h1>
+               <% end %>
             </div>
          </div>
          <div class = "col-md-8">
@@ -23,5 +26,5 @@
               <% end %>
            </ul> 
         </div>
-     </div> 
-</div>
+     </div>  
+ </div> 
