--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -12,7 +12,7 @@
                 <li class="nav-item pull-md-right"><%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "nav-link" %></li>
                 <li class="nav-item pull-md-right"><%= link_to "Account", account_path, class: "nav-link" %></li>
 
-                <li class="nav-item active pull-md-right"><%= link_to ' + Review', new_tweet_path, class: "nav-link" %></li>
+                <!-- <li class="nav-item active pull-md-right"><%= link_to ' + Review', new_tweet_path, class: "nav-link" %></li> -->
                 <li class="nav-item active pull-md-right"><%= link_to ' + Story', new_story_path, class: "nav-link" %></li>
            
             <% else %>
