--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,12 +11,10 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>Every story begins with the first sentence</h3>
+                <p>Don't wait, just write!</p>
                 <p><%= link_to "Stories", stories_path, class: "btn btn-secondary" %></p>
             </div>
-            <div class="col-md-6">
-                <h3>Write reviews of bootcamps, tutorials & books</h3>
-                <p><%= link_to "Reviews", tweets_path, class: "btn btn-secondary" %></p>
-            </div>
+           
         </div>
     </div>
 <% else %>     
@@ -33,23 +31,17 @@
              <div class="col-md-6">
                 <h3>Every story begins with a first sentence</h3>
                 <p>Have you ever asked yourself why anyone would want to read what you write? Why should anyone care? Do you know your audience?</p>
-                <p>Well, you don't have to wait any longer to find out. Submit excerpts from your writing and get some quick feedback. Whether it's your opening sentence, or a plot for a story you've been mulling over, or a character description, or a poem...</p>
-                <p>The more you write, and the more frequently you edit your writing, the faster you will improve. Writing takes practice, and writing well requires repeated editing and feedback.</p> 
+                <p>Well, you don't have to wait any longer to find out. Submit excerpts and get  quick feedback. Whether it's your opening sentence, a plot for a story you've been mulling over, a poem or a haiku, receiving feedback is the fastest way to get better at your craft.</p>
+                
+            </div>
+            <div class="col-md-6">
+                <h3>Story Board</h3>    
                 <% if Story.last !=nil %>
                     <p><%= Story.last.story%></p>
                 <% else %>
                     <p>Be the first to write a story.</p>
                 <%end %>
                 <p><%= link_to "Stories", stories_path, class: "btn btn-secondary" %></p>
-            </div>
-            <div class="col-md-6">
-                <h3>Write reviews of bootcamps, tutorials & books</h3>
-                <% if Tweet.last !=nil %>
-                    <p><%= Tweet.last.content%></p>
-                <% else %>
-                    <p>Be the first to write a review</p>
-                <%end %>
-                <p><%= link_to "Reviews", tweets_path, class: "btn btn-secondary" %></p>
             </div> 
         </div>
     </div>
